# langchain-task-template

./: README.md  how_to_make_good_polls.md  main.py  pyproject.toml
src/common/: README.md  __init__.py  env.py
src/gen_answers/: README.md  __init__.py  gen_answers.py
src/gen_question/: README.md  __init__.py  gen_question.py
src/rank_poll/: README.md  __init__.py  rank_answers.py  rank_questions.py
